# app-skeleton

./: Cargo.toml  README.md
client/src/: App.svelte  Logs.svelte  main.js
src/: main.rs  model.rs  service.rs  view.rs
src/sql/: 1.0_down.sql  1.0_up.sql
