[package]
name = "app-skeleton"
version = "0.1.0"
authors = ["Félix Gagnon-Grenier <fractalesque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-view = { version = "0.7", features = ["edge"] }
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }
rusqlite = "0.23.1"
tinyfiledialogs = "3.3.10"
